* configure.in: Fix check for libcrypt (Bug 417704 - kukuk)
* Add the "broken_shadow" argument to pam_unix, for ignoring errors
  reading shadow information (from Linux distributors - kukuk)
* Add patches to make PAM modules reentrant (Bug 440107 - kukuk)
* Merge patches from Red Hat (Bug 477000 and other - kukuk)
* Fix pam_rhosts option parsing (Bug 922648 - kukuk)

0.77: Mon Sep 23 10:25:42 PDT 2002

* documentation support for pdf files was not quite right -
  installation was messed up.
* pam_wheel was too aggressive to grant access (in the case of the
  'deny' option you want to pay attention to 'trust'). Fix from
  Nalin (Bugs 476951, 476953 - agmorgan)
* account management support for: pam_shells, pam_listfile, pam_wheel
  and pam_securetty (+ static module fix for pam_nologin). Patch from
  redhat through Harald Welte (Bug 436435 - agmorgan).
* pam_wheel feature from Nalin - can use the module to provide wheel
  access to non-root accounts. Also from Nalin, a bugfix related to
  the primary group of the applicant is the 'wheel' group. (Bugs
  476980, 476941 - agmorgan)
* pam_unix and pam_pwdb: by default turn off the SIGCHLD handler while
  running the helper binary (patch from Nalin) added the "noreap"
  module argument to both of these modules to turn off this new
  default. Bugfix found by Silvan Minghetti for former module and
  521314 checkin. (Bugs 476963, 521314 - agmorgan).
* updated CHANGELOG and configure.in for 0.77 work.

0.76: Mon Jul  8 21:44:59 PDT 2002

* pam_unix: fix for legacy crypt() support when the password entered
  was long. (Bug 521314 - agmorgan).
* pam_access no longer include gethostname() prototype complaint from
  David Lee (Bug 415423 - agmorgan).
* make pam_nologin more secure by default, added two new module
  arguments etc. - acting on suggestion from Nico (Bug 419307 -
  agmorgan)
* link in libpam to libpam_misc - since the latter uses functions in
  the former it makes some sort of sense to do this (although, in the